feat: add api key auth in middleware and swagger
